<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.register.RegisterFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:text="@string/et_register_user"
            android:textAlignment="center"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_user_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_user_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:helperText="@string/help_text_register_password"
            app:layout_constraintEnd_toEndOf="@+id/til_register_user_name"
            app:layout_constraintStart_toStartOf="@+id/til_register_user_name"
            app:layout_constraintTop_toBottomOf="@+id/til_register_user_name"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_user_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/btn_register"
            app:layout_constraintEnd_toEndOf="@+id/til_register_user_password"
            app:layout_constraintStart_toStartOf="@+id/til_register_user_password"
            app:layout_constraintTop_toBottomOf="@+id/til_register_user_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>